project/infra/object_storage/test.deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra0object-storage0storage-service
  namespace: test
  labels:
    app: infra.object-storage
spec:
  ports:
    - port: 8888
      name: grpc
      targetPort: 8888
  # clusterIP: None
  type: ClusterIP
  selector:
    name: infra.object-storage.storage

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra0object-storage0storage
  namespace: test
  labels:
    app: infra.object-storage
spec:
  replicas: 2
  selector:
    matchLabels:
      name: infra.object-storage.storage
      app: infra.object-storage
  template:
    metadata:
      labels:
        name: infra.object-storage.storage
        app: infra.object-storage
    spec:
      containers:
        - name: storage
          image: docker.liukexin.com/artificial/infra/object_storage.storage@sha256:fa42daa13a0c8128c4187825f885a45d68464cf0f72780e40df3ec900245dc33
          ports:
            - containerPort: 8888
              name: grpc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infra0object-storage0route
  namespace: test
  labels:
    app: infra.object-storage
spec:
  parentRefs:
    - name: http-gateway
      namespace: test
  hostnames: ["object-test.liukexin.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infra0object-storage0api-service
          port: 443

---
apiVersion: v1
kind: Service
metadata:
  name: infra0object-storage0api-service
  namespace: test
  labels:
    app: infra.object-storage
spec:
  ports:
    - port: 443
      name: https
      targetPort: 443
  # clusterIP: None
  type: ClusterIP
  selector:
    name: infra.object-storage.api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra0object-storage0api
  namespace: test
  labels:
    app: infra.object-storage
spec:
  replicas: 2
  selector:
    matchLabels:
      name: infra.object-storage.api
      app: infra.object-storage
  template:
    metadata:
      labels:
        name: infra.object-storage.api
        app: infra.object-storage
    spec:
      containers:
        - name: storage
          image: docker.liukexin.com/artificial/infra/object_storage.api@sha256:44253ab5551fe904d3cad5880834b950776aeed140b7db6faef55e4e66daeaf7
          ports:
            - containerPort: 443
              name: https
